[tool.poetry]
name = "reinforcement_learning"
version = "0.1.0"
description = ""
authors = ["Clemens Fiedler <clemens.mb.fiedler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = {extras = ["box2d"], version = "^0.29.1"}
ipykernel = "^6.29.5"
swig = "^4.2.1"
matplotlib = "^3.9.2"
polars = "^1.9.0"
plotly = "^5.24.1"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
